[workspace]
members = ["crates/nextsv", "crates/test-utils"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.82"
repository = "https://github.com/jerusdp/nextsv"

[workspace.dependencies]
cargo_toml = "0.22.3"
clap = { version = "4.5.50", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colored = "3.0.0"
env_logger = "0.11.8"
git-conventional = "0.12.9"
git2 = "0.20.2"
log = "0.4.28"
proc-exit = "2.0.2"
regex = "1.11.2"
thiserror = "2.0.16"

map-macro = "0.3.0"
rstest = "0.26.1"
snapbox = { version = "0.6.21", features = ["cmd"] }
trycmd = "0.15.10"
autocfg = "1.5.0"

[workspace.lints.clippy]
uninlined_format_args = "allow"
