[workspace]
members = ["crates/nextsv", "crates/test-utils"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.82"
repository = "https://github.com/jerusdp/nextsv"

[workspace.dependencies]
cargo_toml = "0.22.3"
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colored = "3.1.1"
env_logger = "0.11.9"
git-conventional = "1.0.0"
git2 = "0.20.4"
log = "0.4.29"
proc-exit = "2.0.2"
regex = "1.12.3"
thiserror = "2.0.18"

map-macro = "0.3.0"
rstest = "0.26.1"
snapbox = { version = "1.0.0", features = ["cmd"] }
trycmd = "1.0.0"
autocfg = "1.5.0"

[workspace.lints.clippy]
uninlined_format_args = "allow"
