[package]
name = "nextsv"
version = "0.19.24"
edition.workspace = true
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version.workspace = true
description = "Next semantic version calculator"
license = "MIT"
readme = "README.md"
repository.workspace = true
keywords = ["semantic", "version", "calculator"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE", "CHANGES.md"]
publish = true

[dependencies]
cargo_toml.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre = "0.6.5"
colored.workspace = true
env_logger.workspace = true
git-conventional.workspace = true
git2.workspace = true
log.workspace = true
proc-exit.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
map-macro.workspace = true
rstest.workspace = true
snapbox.workspace = true
test_utils = { path = "../test-utils" }
trycmd.workspace = true

[lib]
name = "nextsv"
path = "src/lib.rs"

[[bin]]
name = "nextsv"
path = "src/main.rs"

[build-dependencies]
autocfg.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
