[package]
name = "test_utils"
version = "0.19.24"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.20.4"
uuid = { version = "1.20.0", features = ["v4"] }
copy_dir = "0.1.3"
chrono = "0.4.43"
